--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "DetailedErrors": true, // <--- Додайте або переконайтеся, що є цей рядок
+  "DeveloperExceptionPage": { // <--- Додайте або переконайтеся, що є цей розділ
+    "RuntimeErrors": {
+      "Mode": "On"
+    }
   }
 }
