--- a/Stationery.csproj
+++ b/Stationery.csproj
@@ -24,8 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\" />
   </ItemGroup>
 
 </Project>
